--- a/templates/base.html
+++ b/templates/base.html
@@ -6,11 +6,14 @@
     <title>{% block title %} ZenSphere-Find Your Support {% endblock %}</title>
     <!--BootStrap-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css">
-    <!--CSS-->
+    <!--BootStrap Theme Link-->
+    <link rel="stylesheet" href="https://unpkg.com/bootstrap@5.3.2/dist/css/bootstrap.min.css">
+    <!--Custom CSS-->
     <!-- <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}"> -->
 </head>
 <body>
     {% block content %}
     {% endblock %}
+    <script src="https://unpkg.com/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
