--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -3,38 +3,38 @@
 
 {% block content %}
     <nav class="navbar navbar-expand-lg navbar-light">
-        <button class="navbar-toggler" type="button" 
-                data-toggle="collapse" data-target="#navbarTogglerDemo03" 
-                aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation"
-            >
-        <span class="navbar-toggler-icon"></span>
-        </button>
-        <a class="navbar-brand" href="{{ url_for('home_page') }}">ZENSPHERE</a>
-        <!------------>
-        <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
-        <ul class="navbar-nav mr-auto mt-2 mt-lg-0 ml-auto">
-                <li class="nav-item active text-center">
-                    <a class="nav-link" href="">
-                        Features 
-                        <span class="sr-only">(current)</span>
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link disabled" href="">FAQ</a>
-                </li>
-        </ul>
-        <!-------------------->
-        <!--Buttons-->
-        <form class="form-inline my-2 my-lg-0">
-            <a href="{{url_for('signup')}}">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="button">Sign Up</button>
-            </a>
-            <a href="{{url_for('login')}}">
+      <button class="navbar-toggler" type="button" 
+              data-toggle="collapse" data-target="#navbarTogglerDemo03" 
+              aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation"
+          >
+          <span class="navbar-toggler-icon"></span>
+      </button>
+      <a class="navbar-brand" href="{{ url_for('home_page') }}">ZENSPHERE</a>
+      <!------------>
+      <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+          <ul class="navbar-nav mr-auto mt-2 mt-lg-0 ml-auto">
+                  <li class="nav-item active text-center">
+                      <a class="nav-link" href="">
+                          Features 
+                          <span class="sr-only">(current)</span>
+                      </a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link" href="{{ url_for('faq') }}">FAQ</a>
+                  </li>
+          </ul>
+          <!-------------------->
+          <!--Buttons-->
+          <form class="form-inline my-2 my-lg-0">
+              <a href="{{url_for('signup')}}">
+                  <button class="btn btn-outline-success my-2 my-sm-0" type="button">Sign Up</button>
+              </a>
+              <a href="{{url_for('login')}}">
                 <button class="btn btn-outline-success my-2 my-sm-0" type="button">Login</button>
-            </a>
-        </form>
-        </div>
-    </nav>
+              </a>
+          </form>
+      </div>
+    </nav>  
     <!----------------->
     <section style="background-color: #eee;">
         <div class="container py-5">
