--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -13,15 +13,19 @@
       <!------------>
       <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
           <ul class="navbar-nav mr-auto mt-2 mt-lg-0 ml-auto">
-                  <li class="nav-item active text-center">
-                      <a class="nav-link" href="">
-                          Features 
-                          <span class="sr-only">(current)</span>
-                      </a>
-                  </li>
-                  <li class="nav-item">
-                      <a class="nav-link" href="{{ url_for('faq') }}">FAQ</a>
-                  </li>
+              <li class="nav-item active text-center">
+                  <a class="nav-link" href="{{url_for('features')}}">
+                      Features 
+                      <span class="sr-only">(features)</span>
+                  </a>
+              </li>
+              <!------------------->
+              <li class="nav-item active text-center">
+                  <a class="nav-link" href="{{url_for('faq')}}">
+                    FAQ
+                    <span class="sr-only">(faq)</span>
+                  </a>
+              </li>
           </ul>
           <!-------------------->
           <!--Buttons-->
@@ -41,19 +45,25 @@
             <div class="col-lg-4">
               <div class="card mb-4">
                 <div class="card-body text-center">
-                  <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava3.webp" alt="avatar"
-                    class="rounded-circle img-fluid" style="width: 150px;">
-                  <h5 class="my-3">{{ username }}</h5>
-                  <p class="text-muted mb-4">United States</p>
-                  <div class="d-flex justify-content-center mb-2 align-items-center">
-                    <!--Chatroom-->
+                  <label>Username:</label>
+                  <input
+                    type="text"
+                    placeholder="Username"
+                    name="name"
+                    value="{{name}}" required
+                  >
+                  <!--Chatroom Code Input-->
+                  <label>Chatroom Code:</label>
+                  <input type="text" placeholder="Chatroom Code" name="code" value="{{code}}" required>
+                  <div class="d-flex justify-content-center mb-2 align-items-center join">
+                    <!---Join Room Buttom-->
                     <a href="{{url_for('chatroom')}}">
-                      <button type="button" name="joinroom" class="btn btn-outline-primary ms-1">
+                      <button type="button" name="joinroom" class="btn btn-outline-primary ms-1 mt-2">
                         Join Room
                       </button>
                     </a>
-                    <!-- <button type="submit" class="btn btn-primary w-50">Create Chatroom</button> -->
                   </div>
+                  <button type="submit" class="btn btn-primary w-50 create">Create Chatroom</button>
                 </div>
               </div>
               <div class="card mb-4 mb-lg-0">
@@ -64,20 +74,8 @@
                       <p class="mb-0">https://mdbootstrap.com</p>
                     </li>
                     <li class="list-group-item d-flex justify-content-between align-items-center p-3">
-                      <i class="fab fa-github fa-lg" style="color: #333333;"></i>
-                      <p class="mb-0">mdbootstrap</p>
-                    </li>
-                    <li class="list-group-item d-flex justify-content-between align-items-center p-3">
                       <i class="fab fa-twitter fa-lg" style="color: #55acee;"></i>
                       <p class="mb-0">@mdbootstrap</p>
-                    </li>
-                    <li class="list-group-item d-flex justify-content-between align-items-center p-3">
-                      <i class="fab fa-instagram fa-lg" style="color: #ac2bac;"></i>
-                      <p class="mb-0">mdbootstrap</p>
-                    </li>
-                    <li class="list-group-item d-flex justify-content-between align-items-center p-3">
-                      <i class="fab fa-facebook-f fa-lg" style="color: #3b5998;"></i>
-                      <p class="mb-0">mdbootstrap</p>
                     </li>
                   </ul>
                 </div>
