changed html files and code

--- a/templates/features.html
+++ b/templates/features.html
@@ -28,7 +28,7 @@
         <!--Buttons-->
         <form class="form-inline my-2 my-lg-0">
             <a href="{{url_for('signup')}}">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="button">Sign Up</button>
+                <button class="btn btn-outline-primary my-2 my-sm-0" type="button">Sign Up</button>
             </a>
             <a href="{{url_for('login')}}">
                 <button class="btn btn-outline-success my-2 my-sm-0" type="button">Login</button>
