--- a/templates/base.html
+++ b/templates/base.html
@@ -1,19 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %} ZenSphere-Find Your Support {% endblock %}</title>
-    <!--BootStrap-->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css">
-    <!--BootStrap Theme Link-->
-    <link rel="stylesheet" href="https://unpkg.com/bootstrap@5.3.2/dist/css/bootstrap.min.css">
-    <!--Custom CSS-->
-    <!-- <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}"> -->
-</head>
-<body>
-    {% block content %}
-    {% endblock %}
+  <head>
+    <meta charset="UTF-8" />
+    <title>{% block title %} ZenSphere-Find your support today!{% endblock %}</title>
+      <!--BootStrap-->
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css">
+      <!--BootStrap Theme Link-->
+      <link rel="stylesheet" href="https://unpkg.com/bootstrap@5.3.2/dist/css/bootstrap.min.css">
+      <!--Custom CSS-->
+      <link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}"/>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js"
+      integrity="sha512-q/dWJ3kcmjBLU4Qc47E4A9kTB4m3wuTY7vkFJDTZKjTs8jhyGQnaUrxa0Ytd0ssMZhbNua9hE+E7Qv1j+DyZwA=="
+      crossorigin="anonymous"
+    ></script>
+    <!--Bootstrap JS-->
+    <!--BootStrap JS Link-->
     <script src="https://unpkg.com/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-</body>
+  </head>
+  <body>
+    {% block content %} {% endblock %}
+  </body>
 </html>
