--- a/templates/faq.html
+++ b/templates/faq.html
@@ -17,23 +17,27 @@
       <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
           <ul class="navbar-nav mr-auto mt-2 mt-lg-0 ml-auto">
                   <li class="nav-item active text-center">
-                      <a class="nav-link" href="">
+                      <a class="nav-link" href="{{url_for('features')}}">
                           Features 
-                          <span class="sr-only">(current)</span>
+                          <span class="sr-only">(features)</span>
                       </a>
                   </li>
-                  <li class="nav-item">
-                      <a class="nav-link" href="{{url_for('faq')}}">FAQ</a>
+                  <!------------------->
+                  <li class="nav-item active text-center">
+                      <a class="nav-link" href="{{url_for('faq')}}">
+                        FAQ
+                        <span class="sr-only">(faq)</span>
+                      </a>
                   </li>
           </ul>
           <!-------------------->
           <!--Buttons-->
           <form class="form-inline my-2 my-lg-0">
               <a href="{{url_for('signup')}}">
-                  <button class="btn btn-outline-success my-2 my-sm-0" type="button">Sign Up</button>
+                  <button class="btn btn-outline-primary my-2 my-sm-0" type="button">Sign Up</button>
               </a>
               <a href="{{url_for('login')}}">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="button">Login</button>
+                <button class="btn btn-outline-primary my-2 my-sm-0" type="button">Login</button>
               </a>
           </form>
       </div>
@@ -102,6 +106,7 @@
           </div>
         </div>
       </div>
+    </section>
       <!--End of Accordion Section-->
     </main>
     <!------------>
@@ -167,5 +172,4 @@
       </section>
   </footer>
   <!--End of Footer-->
-  </section>
 {% endblock %}
