--- a/templates/login.html
+++ b/templates/login.html
@@ -16,7 +16,7 @@
         <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0 ml-auto">
                     <li class="nav-item active text-center">
-                        <a class="nav-link" href="">
+                        <a class="nav-link" href="{{ url_for('features') }}">
                             Features 
                             <span class="sr-only">(current)</span>
                         </a>
@@ -29,10 +29,10 @@
             <!--Buttons-->
             <form class="form-inline my-2 my-lg-0">
                 <a href="{{url_for('signup')}}">
-                    <button class="btn btn-outline-success my-2 my-sm-0" type="button">Sign Up</button>
+                    <button class="btn btn-outline-primary my-2 my-sm-0" type="button">Sign Up</button>
                 </a>
                 <a href="{{url_for('login')}}">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="button">Login</button>
+                <button class="btn btn-outline-primary my-2 my-sm-0" type="button">Login</button>
                 </a>
             </form>
         </div>
