--- a/templates/signup.html
+++ b/templates/signup.html
@@ -17,7 +17,7 @@
         <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
         <ul class="navbar-nav mr-auto mt-2 mt-lg-0 ml-auto">
                 <li class="nav-item active text-center">
-                    <a class="nav-link" href="">
+                    <a class="nav-link" href="{{ url_for('features') }}">
                         Features 
                         <span class="sr-only">(current)</span>
                     </a>
@@ -30,9 +30,9 @@
         <!--Buttons-->
         <form class="form-inline my-2 my-lg-0">
             <a href="{{url_for('signup')}}">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="button">Sign Up</button>
+                <button class="btn btn-outline-primary my-2 my-sm-0" type="button">Sign Up</button>
             </a>
-            <button class="btn btn-outline-success my-2 my-sm-0" type="button">
+            <button class="btn btn-outline-primary my-2 my-sm-0" type="button">
                 <a href="{{url_for('login')}}">
                     Login
                 </a>
