--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %} 
 
-{% block title %} {% endblock%}
+{% block title %} Home-ZenSphere{% endblock%}
 
 {% block content %}
 <nav class="navbar navbar-expand-lg navbar-light">
