--- a/templates/room.html
+++ b/templates/room.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %} 
 
+{% block title %} Chatroom-Zensphere {% endblock %}
+
 {% block content %}
 <nav class="navbar navbar-expand-lg navbar-light">
   <button class="navbar-toggler" type="button" 
