--- a/templates/room.html
+++ b/templates/room.html
@@ -56,7 +56,6 @@
 <!------------------->
     <!--Footer-->    
     <footer>
-      <section class="container-fluid">
           <div class="container-fluid">
               <div class="row row-cols-1 row-cols-sm-2 row-cols-md-5 py-5 my-5 border-top">
                   <div class="col mb-3">
@@ -113,11 +112,10 @@
                   </div>
               </div>
           </div>
-      </section>
   </footer>
   <!--End of Footer-->
 <script type="text/javascript">
-  var socketio = io();
+  let socketio = io();
 
   const messages = document.getElementById("messages");
 
