--- a/templates/base.html
+++ b/templates/base.html
@@ -9,12 +9,12 @@
       <link rel="stylesheet" href="https://unpkg.com/bootstrap@5.3.2/dist/css/bootstrap.min.css">
       <!--Custom CSS-->
       <link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}"/>
+    <!--SocketIO-->
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js"
       integrity="sha512-q/dWJ3kcmjBLU4Qc47E4A9kTB4m3wuTY7vkFJDTZKjTs8jhyGQnaUrxa0Ytd0ssMZhbNua9hE+E7Qv1j+DyZwA=="
       crossorigin="anonymous"
     ></script>
-    <!--Bootstrap JS-->
     <!--BootStrap JS Link-->
     <script src="https://unpkg.com/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   </head>
